--- a/VcppBits/Settings2/CMakeLists.txt
+++ b/VcppBits/Settings2/CMakeLists.txt
@@ -1,8 +1,7 @@
 add_library(VcppBits-Settings2 INTERFACE)
 
-#TODO2: is this right? (linking to header-only lib)
-target_link_libraries(VcppBits-Settings2 VcppBits-StringUtils)
-target_link_libraries(VcppBits-Settings2 VcppBits-KeyFile)
+target_link_libraries(VcppBits-Settings2 INTERFACE VcppBits-StringUtils)
+target_link_libraries(VcppBits-Settings2 INTERFACE VcppBits-KeyFile)
 
 include("../VcppBitsBuildsystemUtils.cmake")
 
