--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+language: cpp
+
 compiler:
   - clang
   - gcc
@@ -6,5 +8,5 @@ script:
   # скрипт сборки и тестирования проекта:
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=$BUILD_CONFIGURATION -DTARGET_CPU=$TARGET_CPU
+  - cmake ..
   - cmake --build .
